--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-parser": "^1.4.1",
     "express": "^3.21.2",
     "express-session": "^1.13.0",
+    "gridfs": "^1.0.0",
     "http": "0.0.0",
     "mongoose": "^4.4.12",
     "multer": "^1.1.0",
